--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "deploy": "gh-pages -d dist",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -17,6 +18,7 @@
     "vite": "^6.0.11"
   },
   "devDependencies": {
+    "gh-pages": "^6.3.0",
     "sass": "^1.83.4"
   }
 }
